<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/offset_item_data"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/offset_item_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id_pos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_pos"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_record"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_hd_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_hd_route"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nom_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nom_route"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nom_zak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nom_zak"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nom_nakl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nom_nakl"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/offset_item_data"
        android:src="@drawable/ic_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>